fixed the big gap on Upload Images

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,6 @@ h1 {
   background-color: rgba(255, 255, 255, 0.5);
   width: 60%;
   margin:0 auto;
-  margin-top: 500px;
   margin-bottom: 30px;
   padding: 10px;
   text-align: center;
